welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: reassignment to val
  if(day=1){
        ^alarmClock:3: error: type mismatch;
 found   : Boolean
 required: String
    vacation==false
            ^alarmClock:2: error: type mismatch;
 found   : Unit
 required: String
  if(day=1){
  ^